--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/icb_liaison_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/icb_liaison_survivor.yml
@@ -1,51 +1,43 @@
 - type: job
-  parent: CMSurvivor
+  parent: CMSurvivorCorporate
   id: CMSurvivorICB
   name: cm-job-name-survivor-icb
   description: cm-job-description-icb
-  playTimeTracker: CMJobSurvivorCorporate
+  playTimeTracker: CMJobSurvivorICB
   ranks:
-    RMCRankWeYaJuniorExecutive: []
+    RMCRankICBCorporateLiaison: []
   startingGear: RMCGearSurvivorICB
   accessGroups:
   - ColonistCorporate
   special:
   - !type:AddComponentSpecial
     components:
-    - type: Skills
-      skills:
-        RMCSkillConstruction: 1
-        RMCSkillEndurance: 2
-        RMCSkillFireman: 1
-        RMCSkillFirearms: 1
     - type: EquipSurvivorPreset
-      preset: RMCSurvivorPresetCorporate
-    - type: RMCSurvivor
-    - type: RMCRibbon
-    - type: MotionDetectorTracked
+      preset: RMCGearSurvivorPresetICB
     - type: NpcFactionMember
       factions:
-      - WeYa
       - Survivor
-    - type: IntelRescueSurvivorObjective
-    - type: RMCAllowSuitStorage
 
 - type: startingGear
-  id: RMCGearSurvivorCorporate
+  id: RMCGearSurvivorICB
   equipment:
     ears: RMCHeadsetDistressWeYaColony
-    jumpsuit: CMJumpsuitLiaisonField
-    outerClothing: RMCArmorVest
+    jumpsuit: CMJumpsuitLiaisonBlack
+    head: RMCHardhatWhite
+    outerClothing: RMCHazardVestBlack
     shoes: RMCShoesLaceup
+    eyes: RMCSunglasses
     back: CMSatchelFillSurvivor # TODO RMC14 secure leather satchel
     id: CMIDCardLiaisonColony
     pocket1: RMCPouchSurvivalFill
-    pocket2: RMCPouchDocument
+    pocket2: RMCPouchGeneralLargeICBLiaison
+  inhand:
+  - CMClipboard
 
 - type: entity
   parent: CMSpawnPointJobBase
-  id: RMCSpawnPointSurvivorCorporate
-  name: survivor corporate spawn point
+  id: RMCSpawnPointSurvivorICB
+  name: survivor icb spawn point
   components:
   - type: SpawnPoint
     job_id: CMSurvivor
@@ -57,28 +49,10 @@
       state: survivor
 
 - type: playTimeTracker
-  id: CMJobSurvivorCorporate
+  id: CMJobSurvivorICB
   isHumanoid: true
 
 - type: entity
   parent: RMCSurvivorPresetCivilian
-  id: RMCSurvivorPresetCorporate
-  name: corporate colonist preset # TODO RMC14 random research notes
-
-- type: entity
-  parent: MarkerBase
-  id: RMCRandomHumanoidSurvivorCorporate
-  name: corporate colonist ghost role
-  components:
-  - type: Sprite
-    layers:
-    - state: red
-  - type: RandomHumanoidSpawner
-    settings: RMCSurvivorCorporate
-
-- type: randomHumanoidSettings
-  parent: RMCSettingsGhostRole
-  id: RMCSurvivorCorporate
-  components:
-  - type: RMCJobSpawner
-    job: CMSurvivorCorporate
+  id: RMCGearSurvivorPresetICB
+  name: icb colonist preset # TODO RMC14 random research notes
