--- a/Resources/Prototypes/_RMC14/Reagents/medicine.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/medicine.yml
@@ -89,50 +89,32 @@
         damage:
         - Toxin: -0.5
       - !type:HealthChange
-        conditions:
-        - !type:ReagentThreshold
-          min: 15
-        damage:
-          groups:
-            Brute: 0.5
-      - !type:Jitter
-        conditions:
-        - !type:ReagentThreshold
-          min: 25
-      - !type:PopupMessage
-        conditions:
-        - !type:ReagentThreshold
-          min: 25
-        type: Local
-        visualType: Medium
-        messages: [ "generic-reagent-effect-nauseous" ]
-        probability: 0.2
-      - !type:GenericStatusEffect
-        conditions:
-        - !type:ReagentThreshold
-          min: 25
-        key: Drunk
-        component: Drunk
-        time: 30
-        type: Add
-      - !type:HealthChange
-        damage:
-          groups:
-            Brute: 0.12
-      - !type:HealthChange
-        conditions:
-        - !type:ReagentThreshold
-          min: 15
         damage:
           groups:
             Brute: 0.25
       - !type:HealthChange
         conditions:
         - !type:ReagentThreshold
+          min: 15 #TODO 0.25 eye damage/s at 15 OD
+        damage:
+          groups:
+            Brute: 1
+      - !type:HealthChange
+        conditions:
+        - !type:ReagentThreshold
           min: 25
         damage:
           groups:
-            Brute: 0.62
+            Brute: 1.25
+      - !type:GenericStatusEffect
+        conditions:
+        - !type:ReagentThreshold
+          min: 25
+        key: Drowsiness
+        component: Drowsiness
+        time: 30
+        type: Add
+
 
 # TODO RMC14 other effects
 - type: reagent
@@ -582,3 +564,45 @@
         - Toxin: -3.75
         - Brute: -2.25
         - Burn: -3
+
+# TODO RMC14 other effects
+- type: reagent
+  parent: [ CMReagentMedicine, CMArithrazine ]
+  id: RMCRussianRed
+  name: reagent-name-rmcrussianred
+  desc: reagent-desc-rmcrussianred
+  color: "#ce2727"
+  overdose: 20
+  metabolisms:
+    Medicine:
+      metabolismRate: 0.5
+      effects:
+      - !type:EqualHealthChange
+        damage:
+        - Toxin: -0.5
+      - !type:HealthChange
+        damage:
+          groups:
+            Brute: 0.5
+      - !type:HealthChange
+        conditions:
+        - !type:ReagentThreshold
+          min: 20 #TODO 0.25 eye damage/s at 20 OD
+        damage:
+          groups:
+            Brute: 1
+      - !type:HealthChange
+        conditions:
+        - !type:ReagentThreshold
+          min: 30
+        damage:
+          groups:
+            Brute: 2.5
+      - !type:GenericStatusEffect
+        conditions:
+        - !type:ReagentThreshold
+          min: 30
+        key: Drowsiness
+        component: Drowsiness
+        time: 30
+        type: Add
