--- a/Resources/Prototypes/_RMC14/Effects/screech.yml
+++ b/Resources/Prototypes/_RMC14/Effects/screech.yml
@@ -32,6 +32,15 @@
       visible: false
 
 - type: entity
+  parent: CMEffectScreech
+  id: RMCEffectScreechHallucination
+  components:
+  - type: Sprite
+    layers:
+    - state: screech
+      visible: false
+
+- type: entity
   parent: RMCEffectScreechValkyrie
   id: RMCEffectScreechValkyrieWeak
   categories: [ HideSpawnMenu ]
