--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/medical_technician_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/medical_technician_survivor.yml
@@ -3,33 +3,29 @@
   id: CMSurvivorMedicalTechnician
   name: cm-job-name-survivor-medical-technician
   description: cm-job-description-survivor
-  playTimeTracker: CMJobSurvivorDoctor
-  ranks:
-    RMCRankCivilianDoctor: []
-  startingGear: RMCGearSurvivorDoctor
-  accessGroups:
-  - ColonistMedical
+  playTimeTracker: CMJobSurvivorMedicalTechnician
+  startingGear: RMCGearSurvivorMedicalTechnician
   special:
   - !type:AddComponentSpecial
     components:
     - type: Skills
+      skills:
+        RMCSkillConstruction: 1
+        RMCSkillEndurance: 2
+        RMCSkillFireman: 1
+        RMCSkillFirearms: 1
+        RMCSkillMedical: 3
+        RMCSkillSurgery: 2
     - type: EquipSurvivorPreset
-      preset: RMCSurvivorPresetDoctor
-    - type: RMCSurvivor
-    - type: RMCRibbon
-    - type: MotionDetectorTracked
-    - type: NpcFactionMember
-      factions:
-      - Survivor
-    - type: IntelRescueSurvivorObjective
-    - type: RMCAllowSuitStorage
+      preset: RMCGearSurvivorPresetMedicalTechnician
 
 - type: startingGear
-  id: RMCGearSurvivorDoctor
+  id: RMCGearSurvivorMedicalTechnician
   equipment:
     mask: CMMaskSterile
     ears: CMHeadsetColony
-    jumpsuit: CMJumpsuitLiaisonBlue
+    head: CMHeadCap
+    jumpsuit: RMCJumpsuitCivilian # TODO green utility jumpsuit
     outerClothing: RMCLabcoat
     gloves: CMHandsLatex
     shoes: RMCShoesLaceup
@@ -39,8 +35,8 @@
 
 - type: entity
   parent: CMSpawnPointJobBase
-  id: RMCSpawnPointSurvivorDoctor
-  name: survivor doctor spawn point
+  id: RMCSpawnPointSurvivorMedicalTechnician
+  name: survivor un peacekeeper spawn point
   components:
   - type: SpawnPoint
     job_id: CMSurvivor
@@ -52,42 +48,10 @@
       state: survivor
 
 - type: playTimeTracker
-  id: CMJobSurvivorDoctor
+  id: CMJobSurvivorMedicalTechnician
   isHumanoid: true
 
 - type: entity
   parent: RMCSurvivorPresetCivilian
-  id: RMCSurvivorPresetDoctor
-  name: doctor colonist preset
-  components:
-  - type: SurvivorPreset
-    randomGearOther:
-    -
-      - [ RMCPouchFirstAidSplintsGauzeOintment ]
-      - [ RMCPouchMedicalFill ]
-      - [ RMCPouchFirstAidInjectors ]
-      - [ RMCPouchFirstResponderFill ]
-      - [ RMCPouchMedkitFillAdvanced ]
-    -
-      - [ RMCGlassesMedicalHUDGlasses ]
-      - [ CMFirstAidKitFilledRobust ]
-      - [ RMCGlassesMedicalHUDGlasses, CMFirstAidKitFilledRobust ]
-      - [ RMCGlassesMedicalHUDGlasses, CMFirstAidKitFilledRobust, CMFirstAidKitSurgeryFilled ]
-
-- type: entity
-  parent: MarkerBase
-  id: RMCRandomHumanoidSurvivorDoctor
-  name: doctor colonist ghost role
-  components:
-  - type: Sprite
-    layers:
-    - state: red
-  - type: RandomHumanoidSpawner
-    settings: RMCSurvivorDoctor
-
-- type: randomHumanoidSettings
-  parent: RMCSettingsGhostRole
-  id: RMCSurvivorDoctor
-  components:
-  - type: RMCJobSpawner
-    job: CMSurvivorDoctor
+  id: RMCGearSurvivorPresetMedicalTechnician
+  name: medical technician colonist preset # TODO RMC14 random research notes
