--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/cargo_technician_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/cargo_technician_survivor.yml
@@ -1,10 +1,11 @@
 - type: job
-  parent: CMSurvivorCivilian
+  parent: CMSurvivorEngineer
   id: CMSurvivorCargoTechnician
   name: cm-job-name-survivor-cargo-technician
   description: cm-job-description-survivor
   playTimeTracker: CMJobSurvivorCargoTechnician
   startingGear: RMCGearSurvivorCargoTechnician
+  #spawnMenuRoleName: Cargo Technician (NV Survivor)
   special:
   - !type:AddComponentSpecial
     components:
@@ -21,17 +22,17 @@
       preset: RMCGearSurvivorPresetCargoTechnician
 
 - type: startingGear
-  id: RMCGearSurvivor
+  id: RMCGearSurvivorCargoTechnician
   equipment:
     jumpsuit: RMCJumpsuitCivilian # TODO RMC colored utility jumpsuits (brown)
-    back: CMSatchelEngineerSurvivorFill
-    head: RMCHeadRoyalBeanie # TODO RMC beanie
+    back: CMSatchelMarineTechSurvivorFill
+    head: RMCHeadBeanie # TODO RMC14 colored beanies
     shoes: RMCShoesJackboots
     hands: CMHandsInsulated
-    id: CMIDCardColonist
+    id: CMIDCardColonistEngineer
     ears: CMHeadsetColony
     pocket1: RMCPouchSurvivalFill
-    pocket2: RMCPouchGeneral
+    pocket2: RMCPouchToolsFill
 
 - type: entity
   parent: CMSpawnPointJobBase
@@ -52,6 +53,6 @@
   isHumanoid: true
 
 - type: entity
-  parent: RMCSurvivorPresetCivilian
+  parent: RMCSurvivorPresetEngineer
   id: RMCGearSurvivorPresetCargoTechnician
-  name: cargo technician colonist preset # TODO RMC14 random research notes
+  name: cargo technician colonist preset
