Mega-commit. Add Miner and CO survs, finish up beach bum, add UN security uniform, some satchel fill varients, more loc, and the NV CO job icon from Dutch-VanDerLinde

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/other.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/other.yml
@@ -227,6 +227,17 @@
 
 - type: entity
   parent: [RMCMarineUniformBase, RMCAlternateFoldableUniformBase]
+  id: RMCJumpsuitUNSecurity
+  name: United Nations Security uniform
+  description: Overalls made of kevlar cover a snazzy blue dress shirt. Often utilized by United Nations security personnel in riot control situations.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Uniforms/Survivor/varadero_riot.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Uniforms/Survivor/varadero_riot.rsi
+
+- type: entity
+  parent: [RMCMarineUniformBase, RMCAlternateFoldableUniformBase]
   id: RMCJumpsuitCivilianJanitor
   name: janitor's jumpsuit
   description: It's the official uniform of the colony's janitor.
