--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Back/satchels.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Back/satchels.yml
@@ -93,6 +93,15 @@
 
 - type: entity
   parent: CMSatchelEngineer
+  id: CMSatchelEngineerMinerSurvivorFill
+  suffix: Survivor
+  components:
+  - type: StorageFill
+    contents:
+    - id: CMSheetMetal20
+
+- type: entity
+  parent: CMSatchelEngineer
   id: CMSatchelEngineerSurvivorFill
   suffix: Survivor
   components:
