--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/commander_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/commander_survivor.yml
@@ -54,7 +54,7 @@
 - type: startingGear
   id: RMCGearSurvivorCommander
   equipment:
-    ears: CMHeadsetColony
+    ears: RMCHeadsetMarineDistress
     jumpsuit: CMJumpsuitBO
     head: RMCHeadCapFlippable
     outerClothing: RMCCoatService
