--- a/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
+++ b/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
@@ -159,4 +159,17 @@
     cm-chatsan-word-survivors: cm-chatsan-replacement-survivors
     cm-chatsan-word-surv: cm-chatsan-replacement-surv
     cm-chatsan-word-survs: cm-chatsan-replacement-survs
-
+    cm-chatsan-word-bvro: cm-chatsan-replacement-bvro
+    cm-chatsan-word-xro: cm-chatsan-replacement-xro
+    cm-chatsan-word-xister: cm-chatsan-replacement-xister
+    cm-chatsan-word-naur: cm-chatsan-replacement-naur
+    cm-chatsan-word-weedkiller: cm-chatsan-replacement-weedkiller
+    cm-chatsan-word-dancer: cm-chatsan-replacement-dancer
+    cm-chatsan-word-larba: cm-chatsan-replacement-larba
+    cm-chatsan-word-toob: cm-chatsan-replacement-toob
+    cm-chatsan-word-toober: cm-chatsan-replacement-toober
+    cm-chatsan-word-cooked: cm-chatsan-replacement-cooked
+    cm-chatsan-word-xooked: cm-chatsan-replacement-xooked
+    cm-chatsan-word-xibidi: cm-chatsan-replacement-xibidi
+    cm-chatsan-word-mcxonald: cm-chatsan-replacement-mcxonald
+    cm-chatsan-word-mcxonalds: cm-chatsan-replacement-mcxonalds
