--- a/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
+++ b/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
@@ -172,3 +172,4 @@
     cm-chatsan-word-xibidi: cm-chatsan-replacement-xibidi
     cm-chatsan-word-mcxonald: cm-chatsan-replacement-mcxonald
     cm-chatsan-word-mcxonalds: cm-chatsan-replacement-mcxonalds
+    cm-chatsan-word-slop: cm-chatsan-replacement-slop
