--- a/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
+++ b/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
@@ -173,3 +173,4 @@
     cm-chatsan-word-mcxonald: cm-chatsan-replacement-mcxonald
     cm-chatsan-word-mcxonalds: cm-chatsan-replacement-mcxonalds
     cm-chatsan-word-slop: cm-chatsan-replacement-slop
+    cm-chatsan-word-spam: cm-chatsan-replacement-spam
