change CO ID to make it more clear its for new varadero

--- a/Resources/Prototypes/_RMC14/Entities/rmc_planets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/rmc_planets.yml
@@ -70,7 +70,7 @@
     - CMSurvivorSecurity: 2
     survivorJobInserts:
       RMCSurvivorCommandingOfficer:
-      - RMCSurvivorCommander: 1
+      - RMCSurvivorCommanderNewVaradero: 1
       CMSurvivor:
       - CMSurvivorBeachBum: -1
       - CMSurvivorMiner: -1
