Fix all the non-parity things! Make black gloves variant, damaged buero headset variant,  fix issues with survs not having needed components, skills, etc! thank you dutch you are phenomenal

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Hands/color.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Hands/color.yml
@@ -1,5 +1,18 @@
 - type: entity
   parent: CMHandsBlackMarine
+  id: RMCHandsBlack
+  name: black gloves
+  description: A simple pair of black gloves.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Hands/Gloves/black.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Hands/Gloves/black.rsi
+  - type: Fiber
+    fiberColor: fibers-black
+
+- type: entity
+  parent: CMHandsBlackMarine
   id: CMHandsInsulated
   name: marine insulated gloves
   description: These gloves will protect the wearer from electric shocks.
