--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
@@ -33,6 +33,18 @@
       key_slots:
       - RMCEncryptionKeyBureau
 
+# For ICB Liaison
+- type: entity
+  parent: RMCHeadsetIconsCMB
+  id: RMCHeadsetDistressBureauDamaged
+  name: damaged bureau earpiece
+  description: A sleek headset used by The Colonial Marshal Bureau, crafted in Sol. Low profile and comfortable. No one is above the law. This one is pretty beat up, and seems to be missing a few frequencies.
+  components:
+  - type: ContainerFill
+    containers:
+      key_slots:
+      - RMCEncryptionKeyBureauDamaged
+
 # For WeYa civilians
 - type: entity
   parent: RMCHeadsetIconsWeYa
