--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/icb_liaison_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/icb_liaison_survivor.yml
@@ -19,16 +19,21 @@
         RMCSkillFirearms: 1
     - type: EquipSurvivorPreset
       preset: RMCGearSurvivorPresetICB
+    - type: RMCSurvivor
+    - type: RMCRibbon
+    - type: MotionDetectorTracked
     - type: NpcFactionMember
       factions:
       - Survivor
+    - type: IntelRescueSurvivorObjective
+    - type: RMCAllowSuitStorage
     - type: JobPrefix
       prefix: cm-job-prefix-survivor-icb
 
 - type: startingGear
   id: RMCGearSurvivorICB
   equipment:
-    ears: RMCHeadsetDistressWeYaColony
+    ears: RMCHeadsetDistressBureauDamaged
     jumpsuit: CMJumpsuitLiaisonBlack
     head: RMCHardhatWhite
     outerClothing: RMCHazardVestBlack
