--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/un_peacekeeper_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/New_Varadero/un_peacekeeper_survivor.yml
@@ -19,6 +19,14 @@
         RMCSkillFirearms: 1
         RMCSkillPolice: 0 # RMC14
         RMCSkillFireman: 2
+    - type: RMCSurvivor
+    - type: RMCRibbon
+    - type: MotionDetectorTracked
+    - type: NpcFactionMember
+      factions:
+      - Survivor
+    - type: IntelRescueSurvivorObjective
+    - type: RMCAllowSuitStorage
     - type: EquipSurvivorPreset
       preset: RMCGearSurvivorPresetUNPeacekeeper
 
