Port chem master and smart fridge

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/auto_injectors.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/auto_injectors.yml
@@ -45,6 +45,7 @@
   - type: IconLabel
     textColor: White
     storedOffset: 0, 12
+  - type: RMCSmartFridgeInsertable
 
 - type: entity
   parent: CMAutoInjector
