--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/beaker.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/beaker.yml
@@ -29,6 +29,7 @@
   - type: DamageOnHighSpeedImpact
     minimumSpeed: 2
     damage: {}
+  - type: RMCSmartFridgeInsertable
 
 - type: entity
   parent: BaseBeakerMetallic
