--- a/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
+++ b/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
@@ -179,3 +179,6 @@
     cm-chatsan-word-xod: cm-chatsan-replacement-xod
     cm-chatsan-word-jesus: cm-chatsan-replacement-jesus
     cm-chatsan-word-xesus: cm-chatsan-replacement-xesus
+    cm-chatsan-word-christ: cm-chatsan-replacement-christ
+    cm-chatsan-word-jesus-christ: cm-chatsan-replacement-christ
+    cm-chatsan-word-froot: cm-chatsan-replacement-froot
