--- a/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
+++ b/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
@@ -159,6 +159,7 @@
     cm-chatsan-word-survivors: cm-chatsan-replacement-survivors
     cm-chatsan-word-surv: cm-chatsan-replacement-surv
     cm-chatsan-word-survs: cm-chatsan-replacement-survs
+    cm-chatsan-word-sis: cm-chatsan-replacement-sis
     cm-chatsan-word-bro: cm-chatsan-replacement-bro
     cm-chatsan-word-bruh: cm-chatsan-replacement-bruh
     cm-chatsan-word-bvro: cm-chatsan-replacement-bvro
