--- a/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
+++ b/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
@@ -184,4 +184,5 @@
     cm-chatsan-word-froot: cm-chatsan-replacement-froot
     cm-chatsan-word-yung: cm-chatsan-replacement-yung
     cm-chatsan-word-croosh: cm-chatsan-replacement-croosh
+    cm-chatsan-word-croosher: cm-chatsan-replacement-croosher
     cm-chatsan-word-bald: cm-chatsan-replacement-bald
