--- a/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
+++ b/Resources/Prototypes/_RMC14/Accents/cm_word_replacements.yml
@@ -186,3 +186,5 @@
     cm-chatsan-word-croosh: cm-chatsan-replacement-croosh
     cm-chatsan-word-croosher: cm-chatsan-replacement-croosher
     cm-chatsan-word-bald: cm-chatsan-replacement-bald
+    cm-chatsan-word-woyer: cm-chatsan-replacement-woyer
+    cm-chatsan-word-senti: cm-chatsan-replacement-senti
